--- a/index.html
+++ b/index.html
@@ -3,128 +3,133 @@
   <head>
     <meta charset="utf-8">
     <link href="css/styles.css" rel="stylesheet" charset="utf-8">
-    <title>Table</title>
+    <title>Nutrifacts</title>
   </head>
   <body>
     <div class="container">
-      <div class="head">
-        <h1>Top 10 Grossing Animated Films of All Time</h1>
-      </div>
       <table>
+        <div class="head">
+          <h1>Nutrition Facts</h1>
+          <caption>Serving Size 1/2 Cup (about 82g)</caption>
+          <caption>Serving Per Container 8</caption>
+        </div>
        <thead>
          <tr>
-           <th class="left">Film Title</th>
-           <th class="center">Released</th>
-           <th class="center">Studio</th>
-           <th class= "right">Worldwide Gross</th>
-           <th class= "right">Domestic Gross</th>
-           <th class= "right">Foreign Gross</th>
-           <th class= "center">Budget</th>
+           <th colspan="8" class="left small">Amount Per Serving</th>
          </tr>
        </thead>
        <tbody>
          <tr>
-           <td class="left">Frozen</td>
-           <td class="center">2013</td>
-           <td class="center">Disney</td>
-           <td class= "right">$1,279,852,693</td>
-           <td class= "right">$400,738,000</td>
-           <td class= "right">$873,481,000</td>
-           <td class= "center">$150,000,000</td>
+           <td colspan="4" class="left"><span class="bold">Calories</span> 200</td>
+           <td colspan="4" class="right">Calories from Fat 130</td>
          </tr>
 
          <tr>
-           <td class="left">Toy Story 3</td>
-           <td class="center">2010</td>
-           <td class="center">Disney/Pixar</td>
-           <td class= "right">$1,279,852,693</td>
-           <td class= "right">$400,738,000</td>
-           <td class= "right">$873,481,000</td>
-           <td class= "center">$200,481,000</td>
+           <td colspan="8" class="right daily"><span class="bold small">&#37; Daily Value	&#42;</span></td>
+         </tr>
+         <tr>
+           <td colspan="4" class="left"><span class="bold">Total Fat</span> 14g</td>
+           <td colspan="4" class="right"><span class="bold">22%</span></td>
+         </tr>
+         <tr>
+           <td colspan="1" class="left"></td>
+           <td colspan="6" class="left">Saturated Fat 9g</td>
+           <td colspan="1" class="right"><span class="bold">22%</span></td>
+         </tr>
+         <tr>
+           <td colspan="1" class="left"></td>
+           <td colspan="7" class="left">Trans Fat 0g</td>
+         </tr>
+         <tr>
+           <td colspan="4" class="left"><span class="bold">Cholesterol</span> 55g</td>
+           <td colspan="4" class="right"><span class="bold">18%</span></td>
+         </tr>
+         <tr>
+           <td colspan="4" class="left"><span class="bold">Sodium</span> 40mg</td>
+           <td colspan="4" class="right"><span class="bold">2%</span></td>
+         </tr>
+         <tr>
+           <td colspan="4" class="left"><span class="bold">Total Carbohydrate</span> 17g</td>
+           <td colspan="4" class="right"><span class="bold">16%</span></td>
+         </tr>
+         <tr>
+           <td colspan="4" class="left">Dietary Fiber 1g</td>
+           <td colspan="4" class="right"><span class="bold">4%</span></td>
+         </tr>
+         <tr>
+           <td colspan="8" class="left">Sugars 14g</td>
+         </tr>
+         <tr>
+           <td colspan="8" class="left"><span class="bold">Protein</span> 3g</td>
+         </tr>
+         <tr>
+           <td colspan="4" class="left vitamin">Vitamin A 10%</td>
+           <td colspan="4" class="left vitamin">&#9679; Vitamin C 0%</td>
+         </tr>
+         <tr>
+           <td colspan="4" class="left">Calcium 10%</td>
+           <td colspan="4" class="left"><span class="small">&#9679;</span> Iron 6%</td>
+         </tr>
+         <tr>
+           <td colspan="8" class="left small">*Percent Daily Values are based on a 2,000 calorie diet. Your daily values may be higher or lower depending on your calorie needs:</td>
+         </tr>
+         <tr>
+           <td colspan="2" class="left none">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+           <td colspan="2"class="left small none">Calories:</td>
+           <td colspan="2" class="left small none">2,000</td>
+            <td colspan="2"  class="left small none">2,500</td>
+         </tr>
+         <tr>
+           <td colspan="2" class="left small below">Total Fat</td>
+           <td colspan="2" class="left small below">Less than</td>
+           <td colspan="2" class="left small below">65g</td>
+            <td colspan="2" class="left small below">80g</td>
+         </tr>
+         <tr>
+           <td colspan="2" class="center small none">Sat. Fat</td>
+           <td colspan="2" class="left small none">Less than</td>
+           <td colspan="2" class="left small none">20g</td>
+            <td colspan="2" class="left small none">25g</td>
+         </tr>
+         <tr>
+           <td colspan="2" class="left small none">Cholesterol</td>
+           <td colspan="2" class="left small none">Less than</td>
+           <td colspan="2" class="left small none">300mg</td>
+            <td colspan="2" class="left small none">300mg</td>
+         </tr>
+         <tr>
+           <td colspan="2" class="left small none">Sodium</td>
+           <td colspan="2" class="left small none">Less than</td>
+           <td colspan="2" class="left small none">2,400mg</td>
+            <td colspan="2" class="left small none">2,400mg</td>
+         </tr>
+         <tr>
+           <td colspan="2" class="left small none">Total Carbohydrate</td>
+           <td colspan="2" class="left small none"></td>
+           <td colspan="2" class="left small none">300g</td>
+            <td colspan="2" class="left small none">375g</td>
+         </tr>
+         <tr>
+           <td colspan="2" class="center small none">Dietary Fiber</td>
+           <td colspan="2" class="left small none"></td>
+           <td colspan="2" class="left small none">25g</td>
+            <td colspan="2" class="left small none">30g</td>
+         </tr>
+         <tr>
+           <td colspan="8" class="left small">Calories per gram:</td>
+         </tr>
+         <tr>
+           <td colspan="8" class="center small none">Fat 9 &#9679; Carbohydrates 4 &#9679; Protein</td>
          </tr>
 
-         <tr>
-           <td class="left">Minions</td>
-           <td class="center">2015</td>
-           <td class="center">Universal</td>
-           <td class= "right">$1,279,852,693</td>
-           <td class= "right">$400,738,000</td>
-           <td class= "right">$873,481,000</td>
-           <td class= "center">$200,481,000</td>
-         </tr>
-
-         <tr>
-           <td class="left">The Lion King</td>
-           <td class="center">1994</td>
-           <td class="center">Disney</td>
-           <td class= "right">879,852,693</td>
-           <td class= "right">$400,738,000</td>
-           <td class= "right">$873,481,000</td>
-           <td class= "center">$200,481,000</td>
-         </tr>
-
-         <tr>
-           <td class="left">Despicable Me 2</td>
-           <td class="center">2013</td>
-           <td class="center">Universal</td>
-           <td class= "right">$879,852,693</td>
-           <td class= "right">$400,738,000</td>
-           <td class= "right">$873,481,000</td>
-           <td class= "center">$200,481,000</td>
-         </tr>
-
-         <tr>
-           <td class="left">Finding Nemo</td>
-           <td class="center">2003</td>
-           <td class="center">Pixar</td>
-           <td class= "right">$879,852,693</td>
-           <td class= "right">$400,738,000</td>
-           <td class= "right">$873,481,000</td>
-           <td class= "center">$200,481,000</td>
-         </tr>
-
-         <tr>
-           <td class="left">Shrek 2</td>
-           <td class="center">2004</td>
-           <td class="center">Dreamworks</td>
-           <td class= "right">$879,852,693</td>
-           <td class= "right">$400,738,000</td>
-           <td class= "right">$873,481,000</td>
-           <td class= "center">$200,481,000</td>
-         </tr>
-
-         <tr>
-           <td class="left">Ice Age: Dawn of the Dinosaurs</td>
-           <td class="center">2009</td>
-           <td class="center">Fox</td>
-           <td class= "right">$879,852,693</td>
-           <td class= "right">$400,738,000</td>
-           <td class= "right">$873,481,000</td>
-           <td class= "center">$200,481,000</td>
-         </tr>
-
-         <tr>
-           <td class="left">Ice Age: Continental Drift</td>
-           <td class="center">2012</td>
-           <td class="center">Fox</td>
-           <td class= "right">$879,852,693</td>
-           <td class= "right">$400,738,000</td>
-           <td class= "right">$873,481,000</td>
-           <td class= "center">$200,481,000</td>
-         </tr>
-
-         <tr>
-           <td class="left">Shrek the Third</td>
-           <td class="center">2007</td>
-           <td class="center">Dreamworks</td>
-           <td class= "right">$879,852,693</td>
-           <td class= "right">$400,738,000</td>
-           <td class= "right">$873,481,000</td>
-           <td class= "center">$200,481,000</td>
-         </tr>
 
        </tbody>
+
      </table>
+
    </div>
-  </body>
+<div class="image">
+<img src="nutri.png" alt="" />
+</div>
+ </body>
 </html>
