fix indents on nutrifacts table

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
            <td colspan="4" class="right"><span class="bold">22%</span></td>
          </tr>
          <tr>
-           <td colspan="1" class="left"></td>
+           <td colspan="1" width="20px" class="left indent"></td>
            <td colspan="6" class="left">Saturated Fat 9g</td>
            <td colspan="1" class="right"><span class="bold">22%</span></td>
          </tr>
          <tr>
-           <td colspan="1" class="left"></td>
+           <td colspan="1" class="left indent"></td>
            <td colspan="7" class="left">Trans Fat 0g</td>
          </tr>
          <tr>
@@ -49,77 +49,82 @@
            <td colspan="4" class="right"><span class="bold">2%</span></td>
          </tr>
          <tr>
-           <td colspan="4" class="left"><span class="bold">Total Carbohydrate</span> 17g</td>
-           <td colspan="4" class="right"><span class="bold">16%</span></td>
+           <td colspan="5" width="188px" class="left"><span class="bold">Total Carbohydrate</span> 17g</td>
+           <td colspan="3" class="right"><span class="bold">16%</span></td>
          </tr>
          <tr>
-           <td colspan="4" class="left">Dietary Fiber 1g</td>
-           <td colspan="4" class="right"><span class="bold">4%</span></td>
+           <td colspan="1"class="left indent"></td>
+           <td colspan="5" class="left">Dietary Fiber 1g</td>
+           <td colspan="2" class="right"><span class="bold">4%</span></td>
          </tr>
          <tr>
-           <td colspan="8" class="left">Sugars 14g</td>
+           <td colspan="1"class="left indent"></td>
+           <td colspan="7" class="left">Sugars 14g</td>
          </tr>
          <tr>
            <td colspan="8" class="left"><span class="bold">Protein</span> 3g</td>
          </tr>
          <tr>
-           <td colspan="4" class="left vitamin">Vitamin A 10%</td>
-           <td colspan="4" class="left vitamin">&#9679; Vitamin C 0%</td>
+           <td colspan="5" class="left vitamin">Vitamin A 10%</td>
+           <td colspan="3" class="left vitamin">&#8226; Vitamin C 0%</td>
          </tr>
          <tr>
-           <td colspan="4" class="left">Calcium 10%</td>
-           <td colspan="4" class="left"><span class="small">&#9679;</span> Iron 6%</td>
+           <td colspan="5" class="left">Calcium 10%</td>
+           <td colspan="3" class="left">&#8226; Iron 6%</td>
          </tr>
          <tr>
-           <td colspan="8" class="left small">*Percent Daily Values are based on a 2,000 calorie diet. Your daily values may be higher or lower depending on your calorie needs:</td>
+           <td colspan="8" class="left small">* Percent Daily Values are based on a 2,000 calorie diet. Your daily values may be higher or lower depending on your calorie needs:</td>
          </tr>
          <tr>
-           <td colspan="2" class="left none">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-           <td colspan="2"class="left small none">Calories:</td>
-           <td colspan="2" class="left small none">2,000</td>
-            <td colspan="2"  class="left small none">2,500</td>
-         </tr>
-         <tr>
-           <td colspan="2" class="left small below">Total Fat</td>
-           <td colspan="2" class="left small below">Less than</td>
-           <td colspan="2" class="left small below">65g</td>
-            <td colspan="2" class="left small below">80g</td>
-         </tr>
-         <tr>
-           <td colspan="2" class="center small none">Sat. Fat</td>
-           <td colspan="2" class="left small none">Less than</td>
-           <td colspan="2" class="left small none">20g</td>
-            <td colspan="2" class="left small none">25g</td>
-         </tr>
-         <tr>
-           <td colspan="2" class="left small none">Cholesterol</td>
-           <td colspan="2" class="left small none">Less than</td>
-           <td colspan="2" class="left small none">300mg</td>
-            <td colspan="2" class="left small none">300mg</td>
-         </tr>
-         <tr>
-           <td colspan="2" class="left small none">Sodium</td>
-           <td colspan="2" class="left small none">Less than</td>
-           <td colspan="2" class="left small none">2,400mg</td>
-            <td colspan="2" class="left small none">2,400mg</td>
-         </tr>
-         <tr>
-           <td colspan="2" class="left small none">Total Carbohydrate</td>
-           <td colspan="2" class="left small none"></td>
-           <td colspan="2" class="left small none">300g</td>
-            <td colspan="2" class="left small none">375g</td>
-         </tr>
-         <tr>
-           <td colspan="2" class="center small none">Dietary Fiber</td>
-           <td colspan="2" class="left small none"></td>
-           <td colspan="2" class="left small none">25g</td>
-            <td colspan="2" class="left small none">30g</td>
-         </tr>
+         <td colspan="8" class="left small">*Percent Daily Values are based on a 2,000 calorie diet. Your daily values may be higher or lower depending on your calorie needs:</td>
+       </tr>
+       <tr>
+         <td colspan="3" class="left small none"></td>
+         <td colspan="2" class="left small none">Calories:</td>
+         <td colspan="2" class="left small none">2,000</td>
+          <td colspan="1"  class="left small none">2,500</td>
+       </tr>
+       <tr>
+         <td colspan="3" class="left small below">Total Fat</td>
+         <td colspan="2" class="left small below">Less than</td>
+         <td colspan="2" class="left small below">65g</td>
+          <td colspan="1" class="left small below">80g</td>
+       </tr>
+       <tr>
+         <td colspan="3" class="center small none">Sat. Fat</td>
+         <td colspan="2" class="left small none">Less than</td>
+         <td colspan="2" class="left small none">20g</td>
+          <td colspan="1" class="left small none">25g</td>
+       </tr>
+       <tr>
+         <td colspan="3" class="left small none">Cholesterol</td>
+         <td colspan="2" class="left small none">Less than</td>
+         <td colspan="2" class="left small none">300mg</td>
+          <td colspan="1" class="left small none">300mg</td>
+       </tr>
+       <tr>
+         <td colspan="3" class="left small none">Sodium</td>
+         <td colspan="2" class="left small none">Less than</td>
+         <td colspan="2" class="left small none">2,400mg</td>
+          <td colspan="1" class="left small none">2,400mg</td>
+       </tr>
+       <tr>
+         <td colspan="3" class="left small none">Total Carbohydrate</td>
+         <td colspan="2" class="left small none"></td>
+         <td colspan="2" class="left small none">300g</td>
+          <td colspan="1" class="left small none">375g</td>
+       </tr>
+       <tr>
+         <td colspan="3" class="center small none">Dietary Fiber</td>
+         <td colspan="2" class="left small none"></td>
+         <td colspan="2" class="left small none">25g</td>
+          <td colspan="1" class="left small none">30g</td>
+       </tr>
          <tr>
            <td colspan="8" class="left small">Calories per gram:</td>
          </tr>
          <tr>
-           <td colspan="8" class="center small none">Fat 9 &#9679; Carbohydrates 4 &#9679; Protein</td>
+           <td colspan="8" class="center small none">Fat 9 &#8226; Carbohydrates 4 &#8226; Protein</td>
          </tr>
 
 
